--- a/code/questions.html
+++ b/code/questions.html
@@ -67,12 +67,12 @@
 			кошки
 			<small class="counter">3452</small>
 		    </strong>
-		    <a href="#" class="link category-changer">
+		    <a href="#" class="link box_base bg-style_blue-inverse category-changer">
 			<i class="ico ico_content_arrow-next"></i>
 		    </a>
 		</div>
 		<div class="nav__item nav__item_type_shelter">
-		    <a href="#" class="link">
+		    <a href="#" class="link menu__link">
 			<strong class="menu-item-title">
 			    приюты
 			    <small class="counter">352</small>
@@ -81,8 +81,8 @@
 		</div>
 		<div class="nav__item nav__item_type_sections">
 		    <ul class="menu menu__main">
-			<li class="menu__item">
-			    <a href="#" class="link">
+			<li class="menu__item menu__item_active">
+			    <a href="#" class="link menu__link">
 				<strong class="menu-item-title">
 				    вопросы
 				    <small class="counter">352</small>
@@ -90,7 +90,7 @@
 			    </a>
 			    <ul class="menu menu_sub">
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    темы
 					    <small class="counter">52</small>
@@ -98,15 +98,15 @@
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
-					    <small class="counter">752</small>
 					    эксперты
+					    <small class="counter">752</small>
 					</strong>
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    породы
 					    <small class="counter">90</small>
@@ -116,7 +116,7 @@
 			    </ul>
 			</li>
 			<li class="menu__item">
-			    <a href="#" class="link">
+			    <a href="#" class="link menu__link">
 				<strong class="menu-item-title">
 				    гайды
 				    <small class="counter">352</small>
@@ -124,7 +124,7 @@
 			    </a>
 			    <ul class="menu menu_sub">
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    темы
 					    <small class="counter">52</small>
@@ -132,7 +132,7 @@
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    эксперты
 					    <small class="counter">752</small>
@@ -140,7 +140,7 @@
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    заявки
 					    <small class="counter">90</small>
@@ -150,7 +150,7 @@
 			    </ul>
 			</li>
 			<li class="menu__item">
-			    <a href="#" class="link">
+			    <a href="#" class="link menu__link">
 				<strong class="menu-item-title">
 				    фото
 				    <small class="counter">352</small>
@@ -158,7 +158,7 @@
 			    </a>
 			    <ul class="menu menu_sub">
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    чемпионы
 					    <small class="counter">52</small>
@@ -166,7 +166,7 @@
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    питомники
 					    <small class="counter">752</small>
@@ -174,7 +174,7 @@
 				    </a>
 				</li>
 				<li class="menu__item">
-				    <a href="#" class="link">
+				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    породы
 					    <small class="counter">90</small>
@@ -187,7 +187,7 @@
 
 		</div>
 		<div class="nav__item nav__item_type_category-action">
-		    <a href="#" class="link">
+		    <a href="#" class="link menu__link">
 			<strong class="menu-item-title">
 			    задать вопрос
 			</strong>
@@ -198,8 +198,8 @@
 	    <section class="search"> <!-- search -->
 		<form action="#" method="post" class="form form_search-header">
 		    <fieldset class="fieldset">
-			<input type="text" class="field field_type_text field_type_search" placeholder="Что ищете?" />
-			<span class="btn btn_search"><input class="btn__in" type="submit" value="Найти"/></span>
+			<input type="text" class="field field_type_text field_type_search" placeholder="Что Вы ищете?" />
+			<span class="btn btn_search bg-style_blue"><input class="btn__in" type="submit" value="Найти"/></span>
 			<span class="search-results">Найдено 1231</span>
 		    </fieldset>
 		</form>
@@ -213,53 +213,53 @@
 		<span class="navigator__title">Навигатор</span>
 		<ul class="menu menu_breadcrumbs">
 		    <li class="menu__item">
-			<a href="#" class="link link_type_icon"><i class="ico ico_content_home"></i></a>
+			<a href="#" class="link menu__link_icon"><i class="ico ico_content_home"></i></a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link link_type_icon"><i class="ico ico_content_main-category"></i></a>
+			<a href="#" class="link menu__link_icon"><i class="ico ico_content_main-category"></i></a>
+		    </li>
+		    <li class="menu__item menu__item_active">
+			<a href="#" class="link menu__link_icon"><i class="ico ico_content_themes"></i></a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link link_type_icon"><i class="ico ico_content_themes"></i></a>
+			<a href="#" class="link menu__link_icon"><i class="ico ico_content_tags"></i></a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link link_type_icon"><i class="ico ico_content_tags"></i></a>
+			<a href="#" class="link menu__link_icon"><i class="ico ico_content_date"></i></a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link link_type_icon"><i class="ico ico_content_date"></i></a>
+			<a href="#" class="link menu__link">кошки </a><i class="ico ico_content_remove"></i>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link">кошки</a>
+			<a href="#" class="link menu__link">вопросы </a><i class="ico ico_content_remove"></i>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link">вопросы</a>
-		    </li>
-		    <li class="menu__item">
-			<a href="#" class="link">темы</a>
+			<a href="#" class="link menu__link">темы </a><i class="ico ico_content_remove"></i>
 		    </li>
 		</ul>
 	    </section> <!-- / navigator  -->
 
 	    <ul class="tags"> <!-- tags -->
-		<li class="tags__item"><a href="#">Уходи содержание</a></li>
-		<li class="tags__item"><a href="#">Питание</a></li>
-		<li class="tags__item"><a href="#">Поведение</a></li>
-		<li class="tags__item"><a href="#">Вязка</a></li>
-		<li class="tags__item"><a href="#">Беременность</a></li>
-		<li class="tags__item"><a href="#">Помет</a></li>
-		<li class="tags__item"><a href="#">Здоровье</a></li>
-		<li class="tags__item"><a href="#">Болезни</a></li>
-		<li class="tags__item"><a href="#">Документы</a></li>
-		<li class="tags__item"><a href="#">Выставки</a></li>
-		<li class="tags__item"><a href="#">Груминг</a></li>
-		<li class="tags__item"><a href="#">Игрушки</a></li>
-		<li class="tags__item"><a href="#">Пристройство</a></li>
+		<li class="tags__item"><a class="link " href="#">Уход и содержание</a></li>
+		<li class="tags__item"><a class="link " href="#">Питание</a></li>
+		<li class="tags__item tags__item_disabled"><a class="link " href="#">Поведение</a></li>
+		<li class="tags__item"><a class="link " href="#">Вязка</a></li>
+		<li class="tags__item"><a class="link " href="#">Беременность</a></li>
+		<li class="tags__item"><a class="link " href="#">Помет</a></li>
+		<li class="tags__item"><a class="link " href="#">Здоровье</a></li>
+		<li class="tags__item"><a class="link " href="#">Болезни</a></li>
+		<li class="tags__item"><a class="link " href="#">Документы</a></li>
+		<li class="tags__item"><a class="link " href="#">Выставки</a></li>
+		<li class="tags__item"><a class="link " href="#">Груминг</a></li>
+		<li class="tags__item"><a class="link " href="#">Игрушки</a></li>
+		<li class="tags__item"><a class="link "  href="#">Пристройство</a></li>
 	    </ul> <!-- tags -->
 
 	    <header class="page-header"> <!-- page-header -->
 		<h1 class="page-title">Вопросы 345</h1>
 		<ul class="menu menu_sub">
 		    <li class="menu__item">
-			<a href="#" class="link">
+			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
 				сегодня
 				<small class="counter">51</small>
@@ -267,7 +267,7 @@
 			</a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link">
+			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
 				вчера
 				<small class="counter">52</small>
@@ -275,7 +275,7 @@
 			</a>
 		    </li>
 		    <li class="menu__item">
-			<a href="#" class="link">
+			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
 				за неделю
 				<small class="counter">90</small>
@@ -290,15 +290,98 @@
 
 		    <div class="main"> <!-- main -->
 
+			<div class="standard-element standard-element_question">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>
+				<span class="userpic box_base">
+				    <a class="userpic__link" href="#">
+					<img title="UserName" alt="UserName" src="images/content/user4.png" class="userpic__image">
+				    </a>
+				</span>
+				<a href="#" class="standard-element__header__title">Hills, Pro Plan, Acana</a>
+				<small class="date">12 мар</small>
+			    </div>
+			    <div class="standard-element__content">
+				Прошу помощи! Ранее были ситуации как-будто кто-то кусает
+				и она подпрыгивает и бежит.потом чешется. А на днях разодрала себе
+				место возле ухо-глаза. Да и последнее время шерсть стала лезть...Что это?
+				Панически боится выходить из дому. Посему до сих пор девушка....
+			    </div>
+			</div>
+			<div class="standard-element standard-element_question">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>
+				<span class="userpic box_base">
+				    <a class="userpic__link" href="#">
+					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
+				    </a>
+				</span>
+				<a href="#" class="standard-element__header__title">Глисты</a>
+				<small class="date">12 мар</small>
+			    </div>
+			    <div class="standard-element__content">
+				Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
+				Давали "Диронет"суспензию, по инструкции.
+				После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
+			    </div>
+			</div>
+			<div class="standard-element standard-element_question">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>
+				<span class="userpic box_base">
+				    <a class="userpic__link" href="#">
+					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
+				    </a>
+				</span>
+				<a href="#" class="standard-element__header__title">Глисты</a>
+				<small class="date">12 мар</small>
+			    </div>
+			    <div class="standard-element__content">
+				Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
+				Давали "Диронет"суспензию, по инструкции.
+				После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
+			    </div>
+			</div>
+			<div class="standard-element standard-element_question">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>
+				<span class="userpic box_base">
+				    <a class="userpic__link" href="#">
+					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
+				    </a>
+				</span>
+				<a href="#" class="standard-element__header__title">Глисты</a>
+				<small class="date">12 мар</small>
+			    </div>
+			    <div class="short-gallery">
+				<label class="short-gallery__title">ФОТО(32)</label>
+				<div class="gallery-carousel">
+				    <ul class="thumbnails">
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/foto-prev1.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/foto-prev2.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
+				    </ul>
+				</div>
+			    </div>
+			    <div class="standard-element__content">
+				Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
+				Давали "Диронет"суспензию, по инструкции.
+				После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
+			    </div>
+			</div>
+
+
 		    </div> <!-- / main -->
 		    <div class="sidebar"> <!-- sidebar -->
 			<aside class="aside">
-			    <h3 class="aside__header">
+			    <h3 class="aside__header bg-style_red-light">
 				<a href="#" class="link">
 				    <span class="userpic box_base">
 					<img src="images/content/user2.png" alt="UserName" title="UserName" />
 				    </span>
-				    Эксперт раздела &laquo;питание&raquo;
+				    <span class="aside__header__text"> Эксперт раздела &laquo;питание&raquo;</span>
 				</a>
 			    </h3>
 			    <div class="aside__content">
@@ -331,8 +414,7 @@
 				    </li>
 				    <li class="guides-list__item">
 					<a href="#" class="link">
-					    <span class="guide-title">Как отучить кошку драть обои
-						и мебель, ковры, шторы, одежду, обувь, цветы, игрушки</span>
+					    <span class="guide-title">Какотучитькошкудратьобоиимебель,ковры,шторы,одежду,обувь</span>
 					    <small class="guide-points">+544</small>
 					</a>
 				    </li>
@@ -341,12 +423,12 @@
 			</aside>
 
 			<aside class="aside">
-			    <h3 class="aside__header">
+			    <h3 class="aside__header bg-style_red-dark">
 				<a href="#" class="link">
 				    <span class="userpic box_base">
 					<img src="images/content/user3.png" alt="UserName" title="UserName" />
 				    </span>
-				    Эксперт раздела &laquo;Балинез&raquo;
+				    <span class="aside__header__text"> Эксперт раздела &laquo;Балинез&raquo;</span>
 				</a>
 			    </h3>
 			    <img class="aside__thumbnail" src="images/content/aside2.png" alt="" title="" />
@@ -374,8 +456,10 @@
 			    </div>
 			</aside>
 			<aside class="aside">
-			    <h3 class="aside__header">
-				Породы кошек
+			    <h3 class="aside__header bg-style_gray-dark">
+				<a href="#" class="link">
+				    <span class="aside__header__text"> Породы кошек</span>
+				</a>
 			    </h3>
 			    <div class="aside__content">
 				<ul class="selector selector_alphabet">
