--- a/code/questions_themes.html
+++ b/code/questions_themes.html
@@ -88,7 +88,7 @@
 				</strong>
 			    </a>
 			    <ul class="menu menu_sub">
-				<li class="menu__item">
+				<li class="menu__item menu__item_active">
 				    <a href="#" class="link menu__link">
 					<strong class="menu-item-title">
 					    темы
@@ -211,13 +211,13 @@
 	    <section class="navigator"> <!-- navigator  -->
 		<span class="navigator__title">Навигатор</span>
 		<ul class="menu menu_breadcrumbs">
-		    <li class="menu__item">
+		    <li class="menu__item menu__item_active">
 			<a href="#" class="link menu__link_icon"><i class="ico ico_content_home"></i></a>
 		    </li>
 		    <li class="menu__item">
 			<a href="#" class="link menu__link_icon"><i class="ico ico_content_main-category"></i></a>
 		    </li>
-		    <li class="menu__item menu__item_active">
+		    <li class="menu__item">
 			<a href="#" class="link menu__link_icon"><i class="ico ico_content_themes"></i></a>
 		    </li>
 		    <li class="menu__item">
@@ -238,24 +238,8 @@
 		</ul>
 	    </section> <!-- / navigator  -->
 
-	    <ul class="tags"> <!-- tags -->
-		<li class="tags__item"><a class="link " href="#">Уход и содержание</a></li>
-		<li class="tags__item"><a class="link " href="#">Питание</a></li>
-		<li class="tags__item tags__item_disabled"><a class="link " href="#">Поведение</a></li>
-		<li class="tags__item"><a class="link " href="#">Вязка</a></li>
-		<li class="tags__item"><a class="link " href="#">Беременность</a></li>
-		<li class="tags__item"><a class="link " href="#">Помет</a></li>
-		<li class="tags__item"><a class="link " href="#">Здоровье</a></li>
-		<li class="tags__item"><a class="link " href="#">Болезни</a></li>
-		<li class="tags__item"><a class="link " href="#">Документы</a></li>
-		<li class="tags__item"><a class="link " href="#">Выставки</a></li>
-		<li class="tags__item"><a class="link " href="#">Груминг</a></li>
-		<li class="tags__item"><a class="link " href="#">Игрушки</a></li>
-		<li class="tags__item"><a class="link "  href="#">Пристройство</a></li>
-	    </ul> <!-- tags -->
-
 	    <header class="page-header"> <!-- page-header -->
-		<h1 class="page-title">Вопросы 345</h1>
+		<h1 class="page-title">Темы обсуждений 75</h1>
 		<ul class="menu menu_sub">
 		    <li class="menu__item">
 			<a href="#" class="link menu__link">
@@ -289,105 +273,192 @@
 
 		    <div class="main"> <!-- main -->
 
-			<div class="standard-element standard-element_question">
+			<div class="standard-element">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>
-				<span class="userpic box_base">
-				    <a class="userpic__link" href="#">
-					<img title="UserName" alt="UserName" src="images/content/user4.png" class="userpic__image">
-				    </a>
-				</span>
-				<a href="#" class="standard-element__link standard-element__title_date">
-				    <span class="standard-element__title">Выбор подходящего корма для стерилизованной кошки</span>
-				    <small class="date">12 мар</small>
+				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a href="#" class="standard-element__link">
+				    <span class="standard-element__title">Питание</span>				  
 				</a>
 			    </div>
-			    <div class="standard-element__content">				
-				<a href="#" class="link question-text">Прошу помощи! Ранее были ситуации как-будто кто-то кусает
-				    и она подпрыгивает и бежит.потом чешется. А на днях разодрала себе
-				    место возле ухо-глаза. Да и последнее время шерсть стала лезть...Что это?
-				    Панически боится выходить из дому. Посему до сих пор девушка....
-				</a>
-
-			    </div>
-			</div>
-			<div class="standard-element standard-element_question">
-			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>
-				<span class="userpic box_base">
-				    <a class="userpic__link" href="#">
-					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
-				    </a>
-				</span>
-				<a href="#" class="standard-element__link standard-element__title_date">
-				    <span class="standard-element__title">Глисты</span>
-				    <small class="date">12 мар</small>
-				</a>				
-			    </div>
-			    <div class="standard-element__content">
-				<a href="#" class="link question-text">
-
-				    Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
-				    Давали "Диронет"суспензию, по инструкции.
-				    После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
-				</a>
-			    </div>
-			</div>
-			<div class="standard-element standard-element_question">
-			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>
-				<span class="userpic box_base">
-				    <a class="userpic__link" href="#">
-					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
-				    </a>
-				</span>
-				<a href="#" class="standard-element__link standard-element__title_date">
-				    <span class="standard-element__title">Ветеринарная клиника, анализы</span>
-				    <small class="date">12 нояб</small>
-				</a>
-			    </div>
-			    <div class="standard-element__content">
-				<a href="#" class="link question-text">
-				    Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
-				    Давали "Диронет"суспензию, по инструкции.
-				    После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
-				</a>
-			    </div>
-			</div>
-			<div class="standard-element standard-element_question">
-			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>
-				<span class="userpic box_base">
-				    <a class="userpic__link" href="#">
-					<img title="UserName" alt="UserName" src="images/content/user-empty.png" class="userpic__image">
-				    </a>
-				</span>
-				<a href="#" class="standard-element__link standard-element__title_date">
-				    <span class="standard-element__title">Выбор подходящего корма для стерилизованной кошки -Хиллс, Проплан, Экануба или Акана?</span>
-				    <small class="date">12 АПР</small>
-				</a>
-			    </div>
-			    <div class="short-gallery">
-				<label class="short-gallery__title">ФОТО(32)</label>
+			    <div class="short-gallery short-gallery_experts">
+				<label class="short-gallery__title">Эксперты</label>
 				<div class="gallery-carousel">
 				    <ul class="thumbnails">
 					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
-					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/foto-prev1.png" alt="" title="" /></a></li>
 					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
-					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/foto-prev2.png" alt="" title="" /></a></li>
-					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user3.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user7.png" alt="" title="" /></a></li>
 				    </ul>
 				</div>
 			    </div>
-			    <div class="standard-element__content">
-				<a href="#" class="link question-text">
-				    Подскажите, пожалуйста после глистогонного препарата у котенка должны выходить глисты .
-				    Давали "Диронет"суспензию, по инструкции.
-				    После дачи препарата глистов больше не видела.. Заранее спасибо за ответ!
-
-				</a>
+			    <div class="standard-element__content">				
+				<ul class="guides-list">
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Диагноз</span>
+						<small class="date">12 мар</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Профилактика - Прививки</span>
+						<small class="date">12 мар</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Профессиональные корма</span>
+						<small class="date">12 мар</small>
+					    </a>
+					</div>
+				    </li>
+				</ul>
 			    </div>
 			</div>
+
+			<div class="standard-element">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a href="#" class="standard-element__link">
+				    <span class="standard-element__title">Уход и содержание</span>				  
+				</a>
+			    </div>
+			    <div class="short-gallery short-gallery_experts">
+				<label class="short-gallery__title">Эксперты</label>
+				<div class="gallery-carousel">
+				    <ul class="thumbnails">
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user2.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user1.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user3.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user7.png" alt="" title="" /></a></li>
+				    </ul>
+				</div>
+			    </div>
+			    <div class="standard-element__content">				
+				<ul class="guides-list">				    
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Как часто мыть кошку?</span>
+						<small class="date">7 АПР</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Уход за шерстью длинношерстных кошек</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				</ul>
+			    </div>
+			</div>
+
+
+
+			<div class="standard-element">
+			    <div class="standard-element__header">
+				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a href="#" class="standard-element__link">
+				    <span class="standard-element__title">Ветеринария</span>				  
+				</a>
+			    </div>
+			    <div class="short-gallery short-gallery_experts">
+				<label class="short-gallery__title">Эксперты</label>
+				<div class="gallery-carousel">
+				    <ul class="thumbnails">
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user2.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user1.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user3.png" alt="" title="" /></a></li>
+					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user7.png" alt="" title="" /></a></li>
+				    </ul>
+				</div>
+			    </div>
+			    <div class="standard-element__content">				
+				<ul class="guides-list">				    
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Клиники</span>
+						<small class="date">7 АПР</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Врачи</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Анализ при простудных заболеваниях кошек</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Анализ при простудных заболеваниях кошек</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Анализ при простудных заболеваниях кошек, при кожных болезнях, микоплазмоз,ринотрахеит, лечение и лекарства, дозировка</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Анализ при простудных заболеваниях кошек</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				    <li class="guides-list__item">
+					<div class="guide">
+					    <a href="#" class="box box_base bg-style_gray-light">23</a>
+					    <a href="#" class="link guide__link standard-element__title_date">
+						<span class="guide__title">Ветеринарный паспорт и прививки</span>
+						<small class="date">2 ДЕК</small>
+					    </a>
+					</div>
+				    </li>
+				</ul>
+			    </div>
+			</div>
+
 
 		    </div> <!-- / main -->
 		    <div class="sidebar"> <!-- sidebar -->
