вопросы - эксперты, породы

--- a/code/questions_themes.html
+++ b/code/questions_themes.html
@@ -275,13 +275,13 @@
 
 			<div class="standard-element">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a class="box box_base bg-style_blue" href="#">45</a>
 				<a href="#" class="standard-element__link">
-				    <span class="standard-element__title">Питание</span>				  
+				    <span class="standard-element__title">Питание</span>
 				</a>
 			    </div>
 			    <div class="short-gallery short-gallery_experts">
-				<label class="short-gallery__title">Эксперты</label>
+				<a href="#" class="short-gallery__title">Эксперты</a>
 				<div class="gallery-carousel">
 				    <ul class="thumbnails">
 					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
@@ -291,7 +291,7 @@
 				    </ul>
 				</div>
 			    </div>
-			    <div class="standard-element__content">				
+			    <div class="standard-element__content">
 				<ul class="guides-list">
 				    <li class="guides-list__item">
 					<div class="guide">
@@ -326,13 +326,13 @@
 
 			<div class="standard-element">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a class="box box_base bg-style_blue" href="#">45</a>
 				<a href="#" class="standard-element__link">
-				    <span class="standard-element__title">Уход и содержание</span>				  
+				    <span class="standard-element__title">Уход и содержание</span>
 				</a>
 			    </div>
 			    <div class="short-gallery short-gallery_experts">
-				<label class="short-gallery__title">Эксперты</label>
+				<a href="#" class="short-gallery__title">Эксперты</a>
 				<div class="gallery-carousel">
 				    <ul class="thumbnails">
 					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
@@ -344,8 +344,8 @@
 				    </ul>
 				</div>
 			    </div>
-			    <div class="standard-element__content">				
-				<ul class="guides-list">				    
+			    <div class="standard-element__content">
+				<ul class="guides-list">
 				    <li class="guides-list__item">
 					<div class="guide">
 					    <a href="#" class="box box_base bg-style_gray-light">23</a>
@@ -372,13 +372,13 @@
 
 			<div class="standard-element">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">45</a>				
+				<a class="box box_base bg-style_blue" href="#">45</a>
 				<a href="#" class="standard-element__link">
-				    <span class="standard-element__title">Ветеринария</span>				  
+				    <span class="standard-element__title">Ветеринария</span>
 				</a>
 			    </div>
 			    <div class="short-gallery short-gallery_experts">
-				<label class="short-gallery__title">Эксперты</label>
+				<a href="#" class="short-gallery__title">Эксперты</a>
 				<div class="gallery-carousel">
 				    <ul class="thumbnails">
 					<li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
@@ -390,8 +390,8 @@
 				    </ul>
 				</div>
 			    </div>
-			    <div class="standard-element__content">				
-				<ul class="guides-list">				    
+			    <div class="standard-element__content">
+				<ul class="guides-list">
 				    <li class="guides-list__item">
 					<div class="guide">
 					    <a href="#" class="box box_base bg-style_gray-light">23</a>
@@ -600,7 +600,7 @@
 				<ul class="guides-list">
 				    <li class="guides-list__item">
 					<div class="guide">
-					    <a href="#" class="link guide__link">					
+					    <a href="#" class="link guide__link">
 						<span class="guide__title">Сурикаты ушастые</span>
 						<small class="guide__points">+34</small>
 					    </a>
@@ -608,7 +608,7 @@
 				    </li>
 				    <li class="guides-list__item">
 					<div class="guide">
-					    <a href="#" class="link guide__link">					
+					    <a href="#" class="link guide__link">
 						<span class="guide__title">Саванна</span>
 						<small class="guide__points">+6</small>
 					    </a>
