--- a/code/questions_ask.html
+++ b/code/questions_ask.html
@@ -347,13 +347,13 @@
 					    <div class="form-field">
 						<ul class="form-fields form-fields_inline">
 						    <li class="form-fields__item">
-							<label class="form-field form-field_radio">
+							<label class="form-field-radio">
 							    <input type="radio" class="field field_type_radio" name="animal"/>
 							    Кошка
 							</label>
 						    </li>
 						    <li class="form-fields__item">
-							<label class="form-field form-field_radio">
+							<label class="form-field-radio">
 							    <input type="radio" class="field field_type_radio" name="animal"/>
 							    Собака
 							</label>
@@ -405,7 +405,8 @@
 					    </div>
 					</li>
 					<li class="form-fields__item">
-					    <label class="form-field form-field_radio">
+
+					    <label class="form-field form-field-checkbox">
 						<input type="radio" class="field field_type_radio" name="animal"/>
 						Я прочел <a href="#" class="link">Правила общения</a> и готов им следовать
 					    </label>
