--- a/code/questions_breeds.html
+++ b/code/questions_breeds.html
@@ -17,6 +17,8 @@
     <script src="js/jquery-1.10.0.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/jquery.carouFredSel-6.2.1.min.js"></script>
 
 
     <!--[if lte IE 8 ]>
@@ -276,7 +278,7 @@
 
 
 			<div class="standard-element accordion">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header ">
 				<a class="box box_base bg-style_blue" href="#">45</a>
 				<span class="userpic box_base">
 				    <a href="#" class="userpic__link">
@@ -331,7 +333,7 @@
 			</div>
 
 			<div class="standard-element accordion">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header ">
 				<a class="box box_base bg-style_blue" href="#">45</a>
 				<span class="userpic box_base">
 				    <a class="userpic__link" href="#">
@@ -349,7 +351,21 @@
 				    <div class="gallery-carousel">
 					<ul class="thumbnails">
 					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
-					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user9.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user4.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user1.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user2.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user3.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user6.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user7.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user8.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user10.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user1.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user2.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user3.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user5.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user6.png" alt="" title="" /></a></li>
+					    <li class="thumbnails__item"><a class="link" href="#"><img src="images/content/user7.png" alt="" title="" /></a></li>
 					</ul>
 				    </div>
 				</div>
@@ -386,7 +402,7 @@
 			</div>
 
 			<div class="standard-element accordion">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header ">
 				<a class="box box_base bg-style_blue" href="#">45</a>
 				<span class="userpic box_base">
 				    <a class="userpic__link" href="#">
@@ -459,7 +475,7 @@
 			</div>
 
 			<div class="standard-element accordion">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header ">
 				<a class="box box_base bg-style_blue" href="#">45</a>
 				<span class="userpic box_base">
 				    <a class="userpic__link" href="#">
