--- a/code/questions_experts.html
+++ b/code/questions_experts.html
@@ -277,7 +277,7 @@
 
 			<div class="standard-element profile-list">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">4</a>
+				<span class="box box_base bg-style_blue">4</span>
 				<div class="standard-element__link">
 				    <span class="standard-element__title">Питание</span>
 				</div>
@@ -346,7 +346,7 @@
 
 			<div class="standard-element profile-list">
 			    <div class="standard-element__header">
-				<a class="box box_base bg-style_blue" href="#">4</a>
+				<span class="box box_base bg-style_blue">1</span>
 				<div class="standard-element__link">
 				    <span class="standard-element__title">Уход и содержание</span>
 				</div>
