--- a/code/questions_ask.html
+++ b/code/questions_ask.html
@@ -387,7 +387,11 @@
 					<li class="form-fields__item">
 					    <label class="field-label">Краткий загововок</label>
 					    <div class="form-field">
-						<input type="text" class="field field_type_text" placeholder="Тема"/>
+						<input type="text" class="field field_type_text field_state_error" placeholder="Тема"/>
+					    <div class="field-hint">
+						<i class="ico ico_content_warning"></i>
+						<span class="field-hint__text">Заполните это поле, пожалуйста</span>
+					    </div>
 					    </div>
 					</li>
 					<li class="form-fields__item">
@@ -406,7 +410,11 @@
 					<li class="form-fields__item">
 					    <div class="form-field form-field-capcha">
 						<img class="capcha-image" src="images/content/code.png" alt="" title="" />
-						<input type="text" class="field field_type_text field_type_capcha" placeholder="Код на картинке"/>
+						<input type="text" class="field field_type_text field_type_capcha field_state_error" placeholder="Код на картинке"/>
+						  <div class="field-hint">
+						<i class="ico ico_content_warning"></i>
+						<span class="field-hint__text">Заполните это поле, пожалуйста</span>
+					    </div>
 					    </div>
 					</li>
 					<li class="form-fields__item">
